JDK 21, 23c integration