@@ -6,7 +6,7 @@
 
     <groupId>com.oracle</groupId>
     <artifactId>mongo2ora</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.4</version>
     <packaging>jar</packaging>
 
     <name>mongo2ora</name>
@@ -15,9 +15,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.class>com.oracle.mongo2ora.Main</main.class>
         <graalvm.version>22.3.1</graalvm.version>
-        <oracle.jdbc.version>21.9.0.0</oracle.jdbc.version>
+        <!-- oracle.jdbc.version>21.9.0.0</oracle.jdbc.version -->
+        <oracle.jdbc.version>23.3.0.23.09</oracle.jdbc.version>
+        <oracle.jdbc.version_old>21.11.0.0</oracle.jdbc.version_old>
 
-        <targetJavaVersion>19</targetJavaVersion>
+        <targetJavaVersion>21</targetJavaVersion>
         <maven.compiler.source>${targetJavaVersion}</maven.compiler.source>
         <maven.compiler.target>${targetJavaVersion}</maven.compiler.target>
         <maven.compiler.release>${targetJavaVersion}</maven.compiler.release>
@@ -104,12 +106,12 @@
         <dependency>
             <groupId>com.oracle.database.security</groupId>
             <artifactId>osdt_core</artifactId>
-            <version>${oracle.jdbc.version}</version>
+            <version>${oracle.jdbc.version_old}</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.security</groupId>
             <artifactId>osdt_cert</artifactId>
-            <version>${oracle.jdbc.version}</version>
+            <version>${oracle.jdbc.version_old}</version>
         </dependency>
         <!-- dependency>
             <groupId>com.oracle.database.observability</groupId>
@@ -121,25 +123,31 @@
             <artifactId>ojdbc11dms</artifactId>
             <version>${oracle.jdbc.version}</version>
         </dependency -->
+        <!-- ..\mvnw install:install-file -Dfile=ojdbc11-21.9.0.1.jar -DgroupId=com.oracle.database.jdbc -DartifactId=ojdbc11 -Dversion=21.9.0.1 -Dpackaging=jar -->
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc11</artifactId>
-            <version>21.9.0.1</version>
+            <version>23.3.0.23.11</version>
+            <!-- version>${oracle.jdbc.version}</version -->
+<!--            <version>23.4.0.0</version>-->
         </dependency>
         <dependency>
             <groupId>com.oracle.database.xml</groupId>
             <artifactId>xdb</artifactId>
             <version>${oracle.jdbc.version}</version>
         </dependency>
+        <!-- ..\mvnw install:install-file -Dfile=ucp-21.9.0.1.jar -DgroupId=com.oracle.database.jdbc -DartifactId=ucp -Dversion=21.9.0.1 -Dpackaging=jar -->
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ucp</artifactId>
-            <version>21.9.0.1</version>
+            <version>23.3.0.23.11</version>
+            <!-- version>${oracle.jdbc.version}</version -->
+<!--            <version>23.4.0.0</version>-->
         </dependency>
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>rsi</artifactId>
-            <version>21.4.2.0</version>
+            <version>${oracle.jdbc.version}</version>
         </dependency>
         <!-- dependency>
             <groupId>com.oracle.database.jdbc</groupId>
@@ -160,7 +168,7 @@
         <dependency>
             <groupId>com.oracle.database.soda</groupId>
             <artifactId>orajsoda</artifactId>
-            <version>1.1.16</version>
+            <version>1.1.20</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.oracle.database.jdbc</groupId>
@@ -232,9 +240,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
 		<version>3.10.1</version>
 		<configuration>
-                    <source>19</source>
-                    <target>19</target>
-                    <compilerArgument>--enable-preview</compilerArgument>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
             <plugin>
